force-app/main/default/objects/Filter__mdt/Filter__mdt.object-meta.xml
<CustomObject>
    <label>Filter</label>
    <pluralLabel>Filters</pluralLabel>
</CustomObject>