force-app/main/default/objects/Filter__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <inlineHelpText>Use this to reference fields on parent objects, i.e., &quot;Account.Owner.Profile.CreatedBy.Name&quot;
To refer to a field on the original SObjectType, use &quot;SObjectField&quot; instead.
Either this or &quot;SObjectField&quot; must be provided.</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>