force-app/main/default/objects/Filter__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EQUALS</fullName>
                <default>true</default>
                <label>EQUALS</label>
            </value>
            <value>
                <fullName>NOT_EQUALS</fullName>
            </value>
            <value>
                <fullName>IN_COLLECTION</fullName>
            </value>
            <value>
                <fullName>NOT_IN_COLLECTION</fullName>
            </value>
            <value>
                <fullName>GREATER_THAN</fullName>
            </value>
            <value>
                <fullName>GREATER_OR_EQUAL</fullName>
            </value>
            <value>
                <fullName>LESS_THAN</fullName>
            </value>
            <value>
                <fullName>LESS_OR_EQUAL</fullName>
            </value>
            <value>
                <fullName>STARTS_WITH</fullName>
            </value>
            <value>
                <fullName>NOT_STARTS_WITH</fullName>
            </value>
            <value>
                <fullName>ENDS_WITH</fullName>
            </value>
            <value>
                <fullName>NOT_ENDS_WITH</fullName>
            </value>
            <value>
                <fullName>CONTAINS</fullName>
            </value>
            <value>
                <fullName>NOT_CONTAINS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>