force-app/main/default/objects/Filter__mdt/fields/SObjectField__c.field-meta.xml
<CustomField>
    <fullName>SObjectField__c</fullName>
    <label>SObjectField</label>
    <metadataRelationshipControllingField>Filter__mdt.SObjectType__c</metadataRelationshipControllingField>
    <referenceTo>EntityParticle</referenceTo>
    <relationshipLabel>Filters</relationshipLabel>
    <relationshipName>Filters</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>