force-app/main/default/objects/Filter__mdt/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <label>SObjectType</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>