force-app/main/default/objects/Filter__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <inlineHelpText>Use JSON syntax to indicate the data type, i.e.,
- Boolean: true
- Date: &quot;2000-01-01&quot;
- DateTime: &quot;2000-01-01T00:00:00Z&quot;
- Decimal: 1.0
- Integer: 1
- String: &quot;Hello World!&quot;</inlineHelpText>
    <label>Value</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>