force-app/main/default/objects/Filter__mdt/validationRules/EncloseStringsInDoubleQuotes.validationRule-meta.xml
<ValidationRule>
    <fullName>EncloseStringsInDoubleQuotes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNUMBER(Value__c)),
    Value__c != &apos;true&apos;,
    Value__c != &apos;false&apos;,
    OR(
        LEFT(Value__c, 1) != &apos;&quot;&apos;,
        RIGHT(Value__c, 1) != &apos;&quot;&apos;
    )
)</errorConditionFormula>
    <errorDisplayField>Value__c</errorDisplayField>
    <errorMessage>Text, Date, and Date/Time values must be enclosed by double quotes (&quot;)</errorMessage>
</ValidationRule>