force-app/main/default/objects/Filter__mdt/validationRules/ValidateField.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateField</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
        NOT(ISBLANK(SObjectField__c)),
        NOT(ISBLANK(Field_Name__c))
    ),
    AND(
        ISBLANK(SObjectField__c),
        ISBLANK(Field_Name__c)
    )
)</errorConditionFormula>
    <errorMessage>A Filter must have only one of the following:
- SObjectField
- Field Name</errorMessage>
</ValidationRule>